
- cURL:
  . Fixed bug #74125 (Fixed finding CURL on systems with multiarch support).
    (cebe)

- GD:
  . Added support for WebP in imagecreatefromstring() (Andreas Treichel, cmb).

- GMP:
  . Export internal structures and accessor helpers for GMP object. (Sara)
  . Added gmp_binomial(n, k). (Nikita)
  . Added gmp_lcm(a, b). (Nikita)
  . Added gmp_perfect_power(a). (Nikita)

- intl:
  . Fixed bug #75317 (UConverter::setDestinationEncoding changes source instead 
    of destination). (andrewnester)

- interbase:
  . Fixed bug #75453 (Incorrect reflection for ibase_[p]connect). (villfa)

- JSON:
  . Added JSON_THROW_ON_ERROR flag. (Andrea)

- LDAP:
  . Added ldap_exop_refresh helper for EXOP REFRESH operation with dds overlay. 
    (Come)
  . Added full support for sending and parsing ldap controls (Come)

- litespeed:
  . Fixed bug #75248 (Binary directory doesn't get created when building 
    only litespeed SAPI). (petk)
  . Fixed bug #75251 (Missing program prefix and suffix). (petk)

- Mbstring:
  . Fixed bug #65544 (mb title case conversion-first word in quotation isn't
    capitalized). (Nikita)
  . Fixed bug #71298 (MB_CASE_TITLE misbehaves with curled apostrophe/quote.
    (Nikita)
  . Fixed bug #73528 (Crash in zif_mb_send_mail). (Nikita)
  . Fixed bug #74929 (mbstring functions version 7.1.1 are slow compared to 5.3
    on Windows). (Nikita)

- ODBC:
  . Removed support for ODBCRouter. (Kalle)
  . Removed support for Birdstep. (Kalle)

- OpenSSL:
  . Fixed bug #75307 (Wrong reflection for openssl_open function). (villfa)

- PCRE:
  . Implemented https://wiki.php.net/rfc/pcre2-migration (Anatol, Dmitry)

- PDO_DBlib:
  . Implemented request #69592 (allow 0-column rowsets to be skipped
    automatically). (fandrieu)
  . Fixed bug #74243 (allow locales.conf to drive datetime format). (fandrieu)
  . Expose TDS version as \PDO::DBLIB_ATTR_TDS_VERSION attribute on \PDO
    instance. (fandrieu)
  . Treat DATETIME2 columns like DATETIME. (fandrieu)

- PDO_OCI: